--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <title>React App</title>
   </head>
   <body>
-    <script></script>
+    <noscript></noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
